# saneyaml

./: .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  NOTICE  README.md  README.rst  appveyor.yml  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  saneyaml.ABOUT  setup.cfg  setup.py
src/: saneyaml.py
tests/: test_saneyaml.py
tests/data/yamls/: about.yml  about.yml.expected.load.json  about.yml.expected.yaml.dump  afpl-8.0.yml.expected.load.json  artistic-2.0_or_later_or_gpl-2.0.yml.expected.load.json  artistic-2.0_or_later_or_gpl-2.0.yml.expected.yaml.dump  autoconf-exception-3.0.yml.expected.load.json  autoconf-exception-3.0.yml.expected.yaml.dump  contextlib2.yml.expected.load.json  contextlib2.yml.expected.yaml.dump  copyright_test.yml.expected.load.json  copyright_test.yml.expected.yaml.dump  corner-cases.yml  corner-cases.yml.expected.load.json  corner-cases.yml.expected.yaml.dump  gpl-2.0.yml.expected.load.json  gpl-2.0.yml.expected.yaml.dump  idna-2.6-py2.py3-none-any.whl.yml.expected.load.json  idna-2.6-py2.py3-none-any.whl.yml.expected.yaml.dump  isodate.yml.expected.load.json  isodate.yml.expected.yaml.dump  license_texs.yml  license_texs.yml.expected.load.json  license_texs.yml.expected.yaml.dump  lxml-4.2.1-cp27-cp27m-win_amd64.whl.yml.expected.load.json  lxml-4.2.1-cp27-cp27m-win_amd64.whl.yml.expected.yaml.dump  lxml-4.2.1.tar.gz.yml.expected.load.json  lxml-4.2.1.tar.gz.yml.expected.yaml.dump  not-a-license_125.yml.expected.load.json  not-a-license_125.yml.expected.yaml.dump
